# cachebench

./: .gitignore  README.md  pyproject.toml
src/cachebench/: __init__.py  core.py
tests/: test_core.py
