[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cachebench"
version = "0.1.0"
description = "Prompt-cache observability for LLM APIs. Per-call hit ratios, cost saved, regression alerts, miss-aware retry. Anthropic + OpenAI + Bedrock."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MukundaKatta" }]
requires-python = ">=3.10"
keywords = ["llm", "anthropic", "openai", "bedrock", "prompt-caching", "observability", "cost-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.40.0"]
bedrock = ["boto3>=1.34.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/cachebench"
Issues = "https://github.com/MukundaKatta/cachebench/issues"
Repository = "https://github.com/MukundaKatta/cachebench"

[tool.hatch.build.targets.wheel]
packages = ["src/cachebench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
